# KegDisplayDB

./: .gitignore  README.md  kegdisplay.service  pyproject.toml
KegDisplayDB/: __init__.py
KegDisplayDB/__Notes__/: receiving_node.csv  sending_node.csv
KegDisplayDB/db/: __init__.py  change_tracker.py  database.py
KegDisplayDB/db/sync/: __init__.py  network.py  protocol.py  synchronizer.py
KegDisplayDB/dbsync/: __main__.py  dbsync_service.py  service.py
KegDisplayDB/utils/: README_passwd.md  log_config.py  passwd.py
KegDisplayDB/web/: __init__.py  __main__.py  app.py  webinterface.py
KegDisplayDB/web/templates/: base.html  beers.html  dbmanage.html  index.html  login.html  taps.html
tests/: __init__.py
tests/test_db/: test_database_manager.py
tests/test_dbsync/: test_change_tracker.py  test_synced_database.py
tests/test_passwd/: test_passwd.py
tests/test_sync/: test_network.py  test_protocol.py  test_sync_scenarios.py  test_synchronizer.py
tests/test_web/: test_certificate_generation.py
