[tool.poetry]
name = "KegDisplayDB"
version = "0.1.0"
description = "Database, synchronization, and web components for KegDisplay"
authors = ["dhrone <dhrone@dhrone.xyz>"]
license = "MIT"
packages = [{include = "KegDisplayDB"}]

[tool.poetry.dependencies]
python = ">=3.10, <4"
SQLAlchemy = "^2.0.40"
aiosqlite = "^0.21.0"
Flask = "^3.1.0"
Flask-Login = "^0.6.3"
bcrypt = "^4.3.0"
Werkzeug = "^3.1.3"
netifaces = "^0.11.0"
gunicorn = "^23.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
flake8 = "^7.0.0"
coverage = "^7.7.1"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
